issues with about photo on mobile fixed

--- a/style.css
+++ b/style.css
@@ -459,6 +459,9 @@ div.panel h2{
     .mobile{
       width:50%;
     }
+    #aboutphoto{
+      padding-top:25%;
+    }
 
 }
 
@@ -471,6 +474,9 @@ div.panel h2{
     }
     .mobile{
       width:70%;
+    }
+    #aboutphoto{
+      padding-top:25%;
     }
 }
 
